arduino-ide-extension/src/browser/style/monitor.css
.monitor-tab-icon {
    -webkit-mask: url('../icons/monitor-tab-icon.svg');
    mask: url('../icons/monitor-tab-icon.svg');
}

.serial-monitor {
    height: 100%;
    display: flex;
    flex-direction: column;
}

.serial-monitor-messages {
    white-space: 'pre';
    font-family: monospace
}

.serial-monitor .head {
    display: flex;
    padding: 5px;
    height: 27px;
}

.serial-monitor .head .send {
    display: flex;
    flex: 1;
    margin-right: 2px;
}

.serial-monitor .head .send > input {
    line-height: var(--theia-content-line-height);
    width: 100%;
}

.serial-monitor .head .send > input:focus {
    border-color: var(--theia-focusBorder);
}

.serial-monitor .head .config {
    display: flex;
}

.serial-monitor .head .config .select {
    margin-left: 3px;
}

.serial-monitor .body {
    overflow: auto;
    flex: 1;
    padding: 5px;
}

.p-TabBar-toolbar .item.arduino-monitor {
    width: 24px;
    justify-content: center;
    font-size: medium;
    box-sizing: border-box;
}

.p-TabBar-toolbar .item.arduino-monitor.toggled {
    background: var(--theia-sideBarSectionHeader-background);
    filter: contrast(80%);
}

.p-TabBar-toolbar .item .clear-all {
    background: var(--theia-icon-clear) no-repeat;
}

